# FPS

./: CMakeLists.txt  README.md
shaders/: cross_frag.glsl  cross_vert.glsl  fragment.glsl  tex_fragment.glsl  tex_vertex.glsl
src/: camera.cpp  camera.h  main.cpp  maze.cpp  maze.h  shader.cpp  shader.h
src/glad/: glad.h
